[package]
name = "slatedb_estimates"
version = "0.1.0"
edition = "2024"

[dependencies]
slatedb = { git = "https://github.com/slatedb/slatedb", rev = "bc8ab181da3b47b8e1ef88d4bda2d3534964f65c", default-features = false }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
