[package]
name = "slatedb_estimates"
version = "0.1.0"
edition = "2024"

[dependencies]
slatedb = { git = "https://github.com/fiv0/slatedb", rev = "623037b82a0473c0ac00e10a5ccbb7b7c312fe96", default-features = false }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
